--- a/UnitTests/jquery-extensions.html
+++ b/UnitTests/jquery-extensions.html
@@ -12,9 +12,10 @@
     <script src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
     <script src="qunit-extensions-0.0.1.js"></script>
     
-    <script src="../../Scripts/jquery-extensions-0.0.5.js"></script>
+    <script src="../../Scripts/jquery-extensions-0.0.6.js"></script>
 
     <script src="DoNotOverridejQuery/DoNotOverridejQuery.js"></script>
     <script src="trace.init/trace.init.js"></script>
+    <script src="sendToRemote/trace.sendToRemote.js"></script>
 </body>
 </html>
