--- a/UnitTests/sendToRemote/trace.sendToRemote.html
+++ b/UnitTests/sendToRemote/trace.sendToRemote.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>jQuery-extensions should not override code in jQuery library</title>
+    <title>Unit tests for $.extensions.trace.sendToRemote() method</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.15.0.css">
 </head>
@@ -10,7 +10,8 @@
     <div id="qunit-fixture"></div>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
-    <script src="../qunit-extensions-0.0.6.js"></script>
-    <script src="unitTest1.js"></script>
+    <script src="../qunit-extensions-0.0.1.js"></script>
+    <script src="../../Scripts/jquery-extensions-0.0.6.js"></script>
+    <script src="trace.sendToRemote.js"></script>
 </body>
 </html>
